troubleshooting error display for checkout process

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@ build/
 /doc/
 /rdoc/
 
+## Ignore all VCR cassettes
+/spec/support/vcr_cassettes
+
 ## Environment normalisation:
 /.bundle/
 /vendor/bundle
